--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "next": "10.x",
+    "next": "^12.2.0",
     "next-themes": "0.0.15",
     "react": "17.x",
     "react-dom": "17.x",
